*********************************************************************************************
*                                  CHANGE LOG 1.0.0 - > 1.x.x                               *
*********************************************************************************************
  * (3/21/2011) vsouhrada
  	 # 181
  	 	 CHANGED : Corrected traslation in EDEDB. FileDownload threads are now synchronized.
  
  * (3/21/2011) vsouhrada
  	 # 180
  	 	 ADDED   : A New version of The JUIGLE library -> JUIGLE-1.0.2-SNAPSHOT and sources JUIGLE-1.0.2-SNAPSHOT-src. 
  	 	 
  * (03/19/2011) Petr Miko
     # 177   
       CHANGED: Almost every file in EDEDB Perspective and ...ededb packages. EDEDB now handler first start, save download path, show GUI. Using JUIGLErrorInfoUtils for exceptions.
       CHANGED: JERPALang update of new EDEDB translations.  
  
  * (03/17/2011) Petr Miko
     # 176
       CHANGED: JERPALang update of translations for EDEDBPerspective etc.
       ADDED  : Packages "ededb" and "tables" in "ch.ethz.origo.jerpa.prezentation.perspective" with java files for EDEDB. However, in case of changing language, localized texts won't update till next app's fresh start - have to figure out why and how to solve that.  
  
  * (03/17/2011) Petr Miko
     # 175
       ADDED   : EDEDClient - new "library" for JERPA allowing using webservice in EEG/ERP Database. Also added in jar form into lib directory of JERPA trunk.
       CHANGED : Update of JERPALang
       CHANGED : Minor changes in EDEDBPerspective.java  
  
  * (03/17/2011) Petr Miko
     # 174
       CHANGED : minor modification and update of JERPALang in lib directory
       CHANGED : ededb perspective added to config.properties
       CHANGED : correction of bug in PerspectiveLoader, when exception show perspective field as string instead of the perspective name.
       ADEDD   : EDEDBPerspective.java - only new file for testing so far
       ADEDD   : ededb_48.png image for EDEDBPerspective  
  